--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
 .App {
   text-align: center;
+  background-image: url(../public/images/login_bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+  backdrop-filter: 20%;
+}
+.App::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);  
 }
 
 .App-logo {
